# extract

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  api_server.spec  api_server_cad.spec  api_server_entry.py  docker-compose.yml  package.json  pnpm-workspace.yaml  project_architecture.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: release.yml
_project_template/: README.md
api/: __init__.py  main.py
api/dependencies/: auth.py  engine.py  projects_root.py
api/middleware/: auth.py  cors.py  error_handlers.py  logging.py
api/models/: ingest_request.py  llm_request.py  normalize_request.py  project.py  report_request.py  review_request.py
api/routers/: activate.py  analyze.py  capabilities.py  comparables.py  drillholes.py  export.py  ingest.py  llm.py  news.py  normalize.py  notes.py  npv.py  portfolio.py  projects.py  renders.py  reports.py  resources.py  review.py  royalties.py  settings.py  tools.py
configs/cad/: conversion_profiles.yaml  mesh_cleanup.yaml  section_defaults.yaml  semantic_mapping.yaml  snapshot_profiles.yaml
configs/economics/: capex_buckets.yaml  discount_rate_defaults.yaml  financing_profiles.yaml  opex_buckets.yaml  sensitivity_axes.yaml  valuation_metrics.yaml
configs/geology/: compositing.yaml  domain_mapping.yaml  gempy_profiles.yaml  (+3 more)
desktop/: package.json
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: cad_pipeline.md  data_model.md  desktop_app_plan.md  economics_pipeline.md  evaluation_framework.md  folder_conventions.md  geology_pipeline.md  naming_conventions.md  reporting_pipeline.md  review_workflow.md  security_and_access.md  system_overview.md  units_and_coordinate_systems.md
engine/: __init__.py
license-server/: .env.example  checkout.html  main.py  requirements.txt  success.html
scripts/: build_app.sh  build_sidecar.sh  create_structure.py  ensure_sidecar.sh  export_pack.py  release.sh  setup_dev.sh
web/: index.html  package.json  tsconfig.json  vite.config.ts
(+403 files in other folders)
