[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-intelligence-platform"
version = "0.1.0"
description = "Mining Project Economic Analysis Engine"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "polars>=0.20",
    "pyarrow>=15",
    "pydantic>=2.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "anthropic>=0.28",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "pyyaml>=6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
mip = "engine.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
