[package]
name = "mining-intelligence-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mining-intelligence-desktop"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["window-all"] }

[build-dependencies]
tauri-build = { version = "1.5" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
