[package]
name = "mining-intelligence-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mining-intelligence-desktop"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "fs-all", "path-all", "dialog-all", "window-all"] }
dirs-next = "2.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
